--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,19 @@
   }
 }
 
+.details{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  align-items: flex-start;
   justify-content: center;
+  gap:5vh;
   font-size: calc(10px + 2vmin);
   color: white;
 }
